trying to fix the overscrolling into a blank white space on mobile

--- a/src/UI/pages/dashboard/styles.scss
+++ b/src/UI/pages/dashboard/styles.scss
@@ -14,6 +14,7 @@
 
     @include mobile {
         height: 100%;
+        overflow: scroll;
     }
 
     .dashboard-grid {
